--- a/about.html
+++ b/about.html
@@ -40,25 +40,41 @@
         </div>
     </div>
     <div class="tag">
-        <img src="./images/truck.png" alt="truck">
-        <div class="tag_con">
-            <h3>Fast Delivery</h3>
-            <p>For all orders</p>
+
+        <div class="tag_box">
+            <img src="./images/truck.png" alt="truck">
+            <div class="tag_con">
+                <h3>Fast Delivery</h3>
+                <p>For all orders</p>
+            </div>
+
         </div>
-        <img src="./images/cards.png" alt="cards">
-        <div class="tag_con">
-            <h3>Safe Payments</h3>
-            <p>100% secure payments</p>
+
+        <div class="tag_box">
+            <img src="./images/cards.png" alt="cards">
+            <div class="tag_con">
+                <h3>Safe Payments</h3>
+                <p>100% secure payments</p>
+            </div>
+
         </div>
-        <img src="./images/ticket-discount.png" alt="discount">
-        <div class="tag_con">
-            <h3>Discount Coupons</h3>
-            <p>Enjoy huge promotions</p>
+
+        <div class="tag_box">
+            <img src="./images/ticket-discount.png" alt="discount">
+            <div class="tag_con">
+                <h3>Discount Coupons</h3>
+                <p>Enjoy huge promotions</p>
+            </div>
+
         </div>
-        <img src="./images/like-tag.png" alt="like">
-        <div class="tag_con remove">
-            <h3>Quality Support</h3>
-            <p>Dedicated 24/7 support</p>
+
+        <div class="tag_box">
+            <img src="./images/like-tag.png" alt="like">
+            <div class="tag_con remove">
+                <h3>Quality Support</h3>
+                <p>Dedicated 24/7 support</p>
+            </div>
+
         </div>
     </div>
     <div class="about-con2">
